be/src/util/runtime-profile.cc
@@ -45,14 +45,25 @@ static const string THREAD_INVOLUNTARY_CONTEXT_SWITCHES = "InvoluntaryContextSwi
 // The root counter name for all top level counters.
 static const string ROOT_COUNTER = "";
 
-RuntimeProfile::RuntimeProfile(ObjectPool* pool, const string& name) :
-  pool_(pool),
-  own_pool_(false),
-  name_(name),
-  metadata_(-1),
-  counter_total_time_(TCounterType::TIME_NS),
-  local_time_percent_(0) {
-  counter_map_["TotalTime"] = &counter_total_time_;
+const std::string RuntimeProfile::TOTAL_TIME_COUNTER_NAME = "TotalTime";
+
+RuntimeProfile::RuntimeProfile(ObjectPool* pool, const string& name,
+    bool is_averaged_profile)
+  : pool_(pool),
+    own_pool_(false),
+    name_(name),
+    metadata_(-1),
+    is_averaged_profile_(is_averaged_profile),
+    counter_total_time_(TCounterType::TIME_NS),
+    local_time_percent_(0) {
+  Counter* total_time_counter;
+  if (!is_averaged_profile) {
+    total_time_counter = &counter_total_time_;
+  } else {
+    total_time_counter = pool->Add(new AveragedCounter(TCounterType::TIME_NS));
+  }
+
+  counter_map_[TOTAL_TIME_COUNTER_NAME] = total_time_counter;
 }
 
 RuntimeProfile::~RuntimeProfile() {
@@ -124,8 +135,9 @@ RuntimeProfile* RuntimeProfile::CreateFromThrift(ObjectPool* pool,
   return profile;
 }
 
-void RuntimeProfile::Merge(RuntimeProfile* other) {
+void RuntimeProfile::UpdateAverage(RuntimeProfile* other) {
   DCHECK(other != NULL);
+  DCHECK(is_averaged_profile_);
 
   // Merge this level
   {
@@ -136,19 +148,19 @@ void RuntimeProfile::Merge(RuntimeProfile* other) {
     for (src_iter = other->counter_map_.begin();
          src_iter != other->counter_map_.end(); ++src_iter) {
       dst_iter = counter_map_.find(src_iter->first);
+      AveragedCounter* avg_counter;
+
+      // Get the counter with the same name in dst_iter (this->counter_map_)
+      // Create one if it doesn't exist.
       if (dst_iter == counter_map_.end()) {
-        counter_map_[src_iter->first] =
-          pool_->Add(new Counter(src_iter->second->type(), src_iter->second->value()));
+        avg_counter = pool_->Add(new AveragedCounter(src_iter->second->type()));
+        counter_map_[src_iter->first] = avg_counter;
       } else {
         DCHECK(dst_iter->second->type() == src_iter->second->type());
-        if (dst_iter->second->type() == TCounterType::DOUBLE_VALUE) {
-          double new_val = dst_iter->second->double_value() +
-              src_iter->second->double_value();
-          dst_iter->second->Set(new_val);
-        } else {
-          dst_iter->second->Update(src_iter->second->value());
-        }
+        avg_counter = static_cast<AveragedCounter*>(dst_iter->second);
       }
+
+      avg_counter->UpdateCounter(src_iter->second);
     }
 
     ChildCounterMap::const_iterator child_counter_src_itr;
@@ -173,16 +185,17 @@ void RuntimeProfile::Merge(RuntimeProfile* other) {
       if (j != child_map_.end()) {
         child = j->second;
       } else {
-        child = pool_->Add(new RuntimeProfile(pool_, other_child->name_));
-        child->local_time_percent_ = other_child->local_time_percent_;
+        child = pool_->Add(new RuntimeProfile(pool_, other_child->name_, true));
         child->metadata_ = other_child->metadata_;
         bool indent_other_child = other->children_[i].second;
         child_map_[child->name_] = child;
         children_.push_back(make_pair(child, indent_other_child));
       }
-      child->Merge(other_child);
+      child->UpdateAverage(other_child);
     }
   }
+
+  ComputeTimeInProfile();
 }
 
 void RuntimeProfile::Update(const TRuntimeProfileTree& thrift_profile) {
@@ -387,6 +400,7 @@ const string* RuntimeProfile::GetInfoString(const string& key) {
 #define ADD_COUNTER_IMPL(NAME, T) \
   RuntimeProfile::T* RuntimeProfile::NAME(\
       const string& name, TCounterType::type type, const string& parent_counter_name) {\
+    DCHECK_EQ(is_averaged_profile_, false);\
     lock_guard<mutex> l(counter_map_lock_);\
     if (counter_map_.find(name) != counter_map_.end()) {\
       return reinterpret_cast<T*>(counter_map_[name]);\
@@ -407,6 +421,7 @@ ADD_COUNTER_IMPL(AddHighWaterMarkCounter, HighWaterMarkCounter);
 RuntimeProfile::DerivedCounter* RuntimeProfile::AddDerivedCounter(
     const string& name, TCounterType::type type,
     const DerivedCounterFunction& counter_fn, const string& parent_counter_name) {
+  DCHECK_EQ(is_averaged_profile_, false);
   lock_guard<mutex> l(counter_map_lock_);
   if (counter_map_.find(name) != counter_map_.end()) return NULL;
   DerivedCounter* counter = pool_->Add(new DerivedCounter(type, counter_fn));
@@ -476,7 +491,8 @@ void RuntimeProfile::PrettyPrint(ostream* s, const string& prefix) const {
     child_counter_map = child_counter_map_;
   }
 
-  map<string, Counter*>::const_iterator total_time = counter_map.find("TotalTime");
+  map<string, Counter*>::const_iterator total_time =
+      counter_map.find(TOTAL_TIME_COUNTER_NAME);
   DCHECK(total_time != counter_map.end());
 
   stream.flags(ios::fixed);
